--- a/code/hiera.yaml
+++ b/code/hiera.yaml
@@ -1,10 +1,18 @@
 ---
 :backends:
+  - eyaml
   - yaml
+  - json
+:eyaml:
+  :datadir: "etc/puppetlabs/code/environments/%{::environment}/hieradata"
+  :extension: eyaml
+  :pkcs7_private_key: /etc/puppetlabs/keys/private_key.pkcs7.pem
+  :pkcs7_public_key: /etc/puppetlabs/keys/public_key.pkcs7.pem
+:yaml: 
+  :datadir: "/etc/puppetlabs/code/environments/%{::environment}/hieradata"
+:json:
+  :datadir: "/etc/puppetlabs/code/environments/%{::environment}/hieradata"
 :hierarchy:
   - "nodes/%{::trusted.certname}"
   - common
   # Hello world
-
-:yaml:
-  :datadir:
