--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -28,6 +28,7 @@ Vagrant.configure(2) do |config|
       sudo ln -s /puppet_puppetserver /etc/puppetlabs/puppetserver
       sudo sed -i 's/2g/512m/g' /etc/sysconfig/puppetserver
       echo "*.example.com" >> sudo tee /etc/puppetlabs/puppet/autosign.conf
+      sudo /opt/puppetlabs/bin/puppetserver gem install hiera-eyaml
       sudo service puppetserver start
     SHELL
   end
